# Biosphere

./: CMakeLists.txt  README.md
assets/: animation.bio  animation2.bio
include/core/: event.hpp  frame.hpp  renderer.hpp
include/utils/: bio.hpp  globals.hpp  vec2.hpp
src/core/: event.cpp  frame.cpp  main.cpp  renderer.cpp
src/utils/: bio.cpp
